crates/ty_python_semantic/resources/mdtest/snapshots/Unpacking_-_unpacking.md_-_Exactly_too_few_valu…_(f49b5b0379113baa).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Unpacking - unpacking.md - Exactly too few values to unpack
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1,)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Not enough values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | a, b = (1,)  # error: [invalid-assignment]
  | ^^^^   ---- Got 1
  | |
  | Expected 2
  |
info: rule `invalid-assignment` is enabled by default

```
