crates/ty_python_semantic/resources/mdtest/snapshots/Unpacking_-_unpacking.md_-_Exactly_too_many_val…_(46604b6610de33a4).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Unpacking - unpacking.md - Exactly too many values to unpack
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Too many values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
  | ^^^^   --------- Got 3
  | |
  | Expected 2
  |
info: rule `invalid-assignment` is enabled by default

```
