crates/ty_python_semantic/resources/mdtest/snapshots/Unpacking_-_unpacking.md_-_Too_few_values_to_un…_(ae02d76e0c820d3d).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Unpacking - unpacking.md - Too few values to unpack
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | [a, *b, c, d] = (1, 2)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Not enough values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | [a, *b, c, d] = (1, 2)  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^   ------ Got 2
  | |
  | Expected 3 or more
  |
info: rule `invalid-assignment` is enabled by default

```
